--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
         
     <!-- Page Title - Change this to your name/brand (50-60 characters recommended) -->
-    <title>Rendering Newcastle UK</title>
+    <title>Boiler Installers Darlington UK</title>
     <link rel="" type="" href=""> <!-- Update this with your own favicon -->
     
     <!-- Meta Description - Write a description (150-160 characters recommended) -->
